<resources>
    <string name="app_name">REMADDICT</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to">Welcome to</string>
    <string name="Title_name">Therapizer</string>
    <string name="sign_in_to_your_account_text">Sign in to your account</string>
    <string name="email_text">Email</string>
    <string name="email_hint_text">user@example.com</string>
    <string name="password_text">Password</string>
    <string name="no_acount_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_details_text">Please enter the following details</string>
    <string name="f_name_text">First Name</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_text">Last Name</string>
    <string name="last_name_hint">Doe</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="welcome_screen_text">The ideal e-solution to overcome substance use disorder</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="back_button_image_text">back_button_image</string>
    <string name="user_name_text">Username</string>
    <string name="user_selection_text">Who are you?</string>
    <string name="user_selection_patient_text">I\'m looking for\ntreatment</string>
    <string name="continue_text">Continue</string>
    <string name="user_selection_professional_text">I\'m a health\nprofessional</string>
    <string name="patient_registration_top_text">Your first step to recovery</string>
    <string name="general_information_text">General Information</string>
    <string name="username_hint_text">This will be your identity</string>
    <string name="password_hint_text"><![CDATA[Use 9 or more characters, letters, numbers & symbols]]></string>
    <string name="next_text">Next</string>
    <string name="credentials_text">Credentials</string>
    <string name="first_name_text">First name</string>
    <string name="health_professional_registration_text">Health Professional</string>
    <string name="profession_text">Profession</string>
    <string name="name_of_hospital_institute_text">Name of Hospital/Institute</string>
    <string name="registration_code_text">Registration code</string>
    <string name="hello_user_text">Hello Emma</string>
    <string name="user_encouragement_text">Hope you are doing good today!</string>
    <string name="progress_text">Progress</string>
    <string name="overview_text">Overview</string>
    <string name="knowledge_hub_title">Knowledge Hub</string>
    <string name="daily_trackers_text">Daily Trackers</string>
    <string name="sober_streak_text">Sober streak</string>
    <string name="keep_it_up_user_text">Keep it up Emma!</string>
    <string name="you_ve_been_sober_for_text">You\'ve been sober for</string>
    <string name="number_10">10</string>
    <string name="days_text">Days</string>
    <string name="reward_text">Reward</string>
    <string name="your_goals_text">Your Goals</string>
    <string name="books_text">Books</string>
    <string name="articles_text">Articles</string>
    <string name="journals_text">Journals</string>
    <string name="explore_text">Explore</string>
    <string name="withdrawal_text">Withdrawal</string>
    <string name="withdrawal_warning_text">You may experience withdrawal in</string>
    <string name="day_s_text">Day(s)</string>
    <string name="number_01_">01</string>
    <string name="need_help_text">Need Help?</string>
    <string name="withdrawal_help_text">Your Nearest Therapy option</string>
    <string name="contact_medical_professional_text">Contact your nearest medical professional</string>
    <string name="find_text">Find</string>
    <string name="panic_button_text">Panic Button</string>
    <string name="panic_button_decription">Click in case of emergency</string>
    <string name="your_nearest_therapist_text">Your Nearest Therapist</string>
    <string name="search_text">Search</string>
    <string name="therapy_text">Therapy</string>
    <string name="therapy_search_text">Search for preferred Medical Professional</string>
    <string name="clients_text">Clients</string>
    <string name="notes_text">Notes</string>
    <string name="appointments_text">Appointments</string>
    <string name="screening_text">Screening</string>
    <string name="milestone_description">You\'ve reached the 10 day milestone. Get a free therapy session now!</string>
    <string-array name="patient_nav_titles">
        <item>Progress</item>
        <item>Knowledge Hub</item>
        <item>Withdrawal</item>
        <item>Find Help</item>
        <item>Therapy</item>
    </string-array>
    <string-array name="patient_nav_text">
        <item>Check Progress</item>
        <item>Read resourceful information</item>
        <item>Check when withdrawal symptoms are due</item>
        <item>Look for therapists in your area</item>
        <item>Connect with medical professionals</item>
    </string-array>
    <string-array name="patient_knowledge_hub_books_titles">
        <item>Cognitive, Clinical and Neural aspects of drug addiction</item>
        <item>Drugs addiction and the brain</item>
    </string-array>
    <string-array name="patient_knowledge_hub_books_authors">
        <item>Ahmed A. Moustafa · 2020</item>
        <item>George F. Koob, ‎Michael A. Arends, ‎Michel Le Moal · 2014 </item>
    </string-array>
    <string-array name="patient_knowledge_hub_books_description">
        <item> Dr. Moustafa takes this book one-step further by reviewing the psychological causes of relapse..</item>
        <item>The book provides a detailed overview of the pathophysiology of the disease.</item>
    </string-array>
    <string-array name="patient_knowledge_hub_articles_titles">
        <item>Drug Abuse and addiction</item>
        <item>Understanding Drug Use and Addiction DrugFacts</item>
        <item>Article on Drug Addiction and Youth</item>
    </string-array>
    <string-array name="patient_knowledge_hub_articles_authors">
        <item>HelpGuide.org</item>
        <item>DrugFacts</item>
        <item>The Pathway Program</item>
    </string-array>
    <string-array name="patient_knowledge_hub_articles_description">
        <item>Do you or someone you love have a problem with substance abuse? Explore the warning signs and how to get the best help.</item>
        <item>Provides an overview of drug use and addiction, including what happens in the brain during drug use, why some people become addicted while ...</item>
        <item>An article on teen drug addiction, written by Joshua Azevedo and published in Together AZ, an addiction and recovery newspaper in Scottsdale, Arizona.</item>
    </string-array>
    <string-array name="patient_knowledge_hub_journals_titles">
        <item>Journal of Drug Abuse</item>
        <item>Journal of Addiction Medicine</item>
        <item>Journal of Drug Issues</item>
    </string-array>
    <string-array name="patient_knowledge_hub_journals_authors">
        <item>Prime Scholars</item>
        <item>American society of Addiction Medicine</item>
        <item>Sage Journals</item>
    </string-array>
    <string-array name="patient_knowledge_hub_journals_description">
        <item>Journal of Drug Abuse is aim to publish foster activities in the field of drug abuse and the burden associated with mental, neurological and substance use disorders, and to promote mental health worldwide.</item>
        <item>This journal by the American Socirty of Addiction Medicine aims to provide a comprehensive set of Journals that can be used for the treatment and indentification of Drug addiction</item>
        <item>Journal of Drug Issues (JDI), published quarterly, has been dedicated since its inception to providing a professional and scholarly forum centered on the national and international problems associated with drugs, especially illicit drugs.</item>
    </string-array>
    <string-array name="professional_nav_card_titles">
        <item>Clients</item>
        <item>Notes</item>
        <item>Knowledge Hub</item>
        <item>Appointments</item>
    </string-array>
    <string-array name="professional_nav_card_descriptions">
        <item>Store your customer files</item>
        <item>Take Notes during sessions</item>
        <item>Access Reference Material</item>
        <item>Connect with clients</item>
    </string-array>
    <string-array name="client_names">
        <item>Anne Watson</item>
        <item>Yvonne Watson</item>
        <item>David Aaron</item>
    </string-array>
    <string-array name="client_ages">
        <item>22</item>
        <item>20</item>
        <item>24</item>
    </string-array>
    <string-array name="notes_dates">
        <item>12/03/2022</item>
        <item>10/11/2023</item>
        <item>04/06/2022</item>
    </string-array>
    <string-array name="screening_questions">
        <item>Do you have strong urges or powerful cravings to use drugs?</item>
        <item>Have you for a while now wanted to cut back on drugs or made unsuccessful attempts to do so?</item>
        <item>Have you experienced social or relationship problems due to your use of drugs and kept using anyway?</item>
        <item>Do you spend a great deal of time finding, using, or recovering from drugs?</item>
        <item>When you attempt to cut back on or stop your use of drugs, have you experienced uncomfortable physical or mental health symptoms (withdrawal)?</item>
        <item>Do you often use drugs in larger amounts or over a longer period of time than you intended?</item>
    </string-array>
    <string-array name="patient_age_values">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="patient_drugs">
        <item>Cannabis</item>
        <item>Heroin</item>
        <item>Meth</item>
    </string-array>
    <string-array name="patient_Dosage">
        <item>every day </item>
        <item>Ocassionally</item>
        <item>rarely </item>
    </string-array>
    <string-array name="symptom_category_01">
        <item>Irritability</item>
        <item>anger, or aggression</item>
        <item>nervousness or anxiety</item>
        <item>sleep difficulty</item>
        <item>decreased appetite or weight loss</item>
        <item>restlessness</item>
        <item>depressed mood</item>
        <item>abdominal pain</item>
        <item>Shakiness/tremors</item>
        <item>Sweating</item>
        <item>Fever</item>
        <item>Chills</item>
        <item>Headache</item>
    </string-array>
</resources>