<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".activities.SignUpActivity">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/customBlue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/back_img"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSignUpLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up_details_text"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    app:cardCornerRadius="4sp"
                    app:layout_constraintTop_toBottomOf="@+id/textSignUpLabel">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:text="@string/f_name_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/firstNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:hint="@string/first_name_hint"
                            android:imeOptions="actionNext"
                            android:includeFontPadding="false"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:text="@string/last_name_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/lastNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:hint="@string/last_name_hint"
                            android:imeOptions="actionNext"
                            android:includeFontPadding="false"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:text="@string/email_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/emailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:hint="@string/email_hint_text"
                            android:imeOptions="actionNext"
                            android:includeFontPadding="false"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:text="@string/password_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/passwordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:imeOptions="actionNext"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:text="@string/confirm_password_text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/confirmPasswordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:layout_marginTop="8sp"
                            android:layout_marginEnd="8sp"
                            android:imeOptions="actionNext"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginEnd="20sp"
                        android:includeFontPadding="false"
                        android:text="@string/sign_up_text"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/cardSignUp" />

                    <ProgressBar
                        android:id="@+id/signUpProgressBar"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        />

                </FrameLayout>

                <TextView
                    android:id="@+id/haveAccountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:gravity="center"
                    android:text="@string/have_account_text"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:gravity="center"
                    android:text="@string/sign_in_text"
                    android:textAllCaps="true"
                    android:textColor="#FF0000"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/haveAccountTextView" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>